fix breadcrumbs styles on mobile size

--- a/src/pages/Staking/Staking.module.scss
+++ b/src/pages/Staking/Staking.module.scss
@@ -46,3 +46,11 @@
     }
   }
 }
+
+@include forTablet{
+  .stakingWrapper{
+    .breadcrumbs{
+      padding-left: 16px;
+    }
+  }
+}
